--- a/templates/0.5.3/partials/left-nav.md.hbs
+++ b/templates/0.5.3/partials/left-nav.md.hbs
@@ -89,7 +89,7 @@
 	<ul>
 		<li>{{{createLink 'Array modification'}}}</li>
 		<li>{{{createLink 'Components'}}}</li>
-		<li> {{{createLink 'Computed Properties'}}}</li>
+		<li>{{{createLink 'Computed Properties'}}}</li>
 		<li>{{{createLink 'Dependants'}}}</li>
 		<li>{{{createLink 'Expressions'}}}</li>
 		<li>{{{createLink 'Keypaths'}}}</li>
@@ -111,6 +111,7 @@
 	<ul>
 		<li><a href='../0.3.9'>0.3.9</a></li>
 		<li><a href='../0.4.0'>0.4.0</a></li>
+		<li><a href='../0.5.3'>0.5.3</a></li>
 		<li><a href='../edge'>edge</a></li>
 	</ul>
 </section>
