--- a/docs/0.5.4/Ractive.defaults.md.hbs
+++ b/docs/0.5.4/Ractive.defaults.md.hbs
@@ -22,7 +22,7 @@ rative2 = new Ractive({
 });
 ```
 
-The exception is for {{{createLink 'Plugins' 'plugin registries'}}} which, for convience sake, are
+The exception is for {{{createLink 'Plugins' 'plugin registries'}}} which, for the sake of convenience, are
 'registered' directly on `Ractive`. Also, when provided as initialisation or extend options, they do
 not replace, but rather combine with the default registry options:
 
