--- a/docs/0.5.4/Templates.md.hbs
+++ b/docs/0.5.4/Templates.md.hbs
@@ -16,7 +16,7 @@ The most obvious difference is that Ractive templates contain {{{createLink 'mus
 Elements in a Ractive template can have {{{createLink 'events' 'proxy events' 'proxy-events'}}}, which look like attributes but don't get rendered to the DOM as attributes (they are intercepted, and used as event binding instructions instead):
 
 ```html
-<button proxy-click='activate'>Activate!</button>
+<button on-click='activate'>Activate!</button>
 ```
 
 ## Transitions
