teardown: remove unnecessary semi-colon

--- a/docs/0.5.4/ractive.teardown().md.hbs
+++ b/docs/0.5.4/ractive.teardown().md.hbs
@@ -7,5 +7,5 @@ Unrenders this Ractive instance, removing any event handlers that were bound aut
 Calling `ractive.teardown()` causes a `teardown` {{{createLink 'events' 'event'}}} to be fired - this is most useful with {{{createLink 'Ractive.extend()'}}} as it allows you to clean up anything else (event listeners and other bindings) that are part of the subclass.
 
 
-> ### ractive.teardown();
+> ### ractive.teardown()
 > Returns a `Promise` (see {{{createLink 'Promises'}}})
