--- a/templates/0.5.4/partials/left-nav.md.hbs
+++ b/templates/0.5.4/partials/left-nav.md.hbs
@@ -14,7 +14,45 @@
 	<ul>
 		<li>{{{createLink 'Options'}}}</li>
 		<li>{{{createLink 'Ractive.defaults' 'Defaults'}}}</li>
+		<li>{{{createLink 'Advanced configuration' 'Advanced configuration'}}}</li>
 	</ul>
+</section>
+<section>
+	<h1>Core Concepts</h1>
+	<h2>Templates</h2>
+	<ul>
+		<li>{{{createLink 'Templates'}}}</li>
+		<li>{{{createLink 'Mustaches'}}}</li>
+		<li>{{{createLink 'References'}}}</li>
+		<li>{{{createLink 'Expressions'}}}</li>
+		<li>{{{createLink 'Keypaths'}}}</li>
+		<li>{{{createLink 'Partials'}}}</li>
+		<li>{{{createLink 'Decorators'}}}</li>
+		<li>{{{createLink 'Events'}}}</li>
+	</ul>
+	<h2>Data & Binding</h2>
+	<ul>
+		<li>{{{createLink 'Two-way binding'}}}</li>
+		<li>{{{createLink 'Magic mode'}}}</li>
+		<li>{{{createLink 'Dependants'}}}</li>
+		<li>{{{createLink 'Array modification'}}}</li>
+		<li>{{{createLink 'Computed Properties'}}}</li>
+		<li>{{{createLink 'Observers'}}}</li>
+		<li>{{{createLink 'Adaptors'}}}</li>
+		<li>{{{createLink 'Parallel DOM'}}}</li>
+	</ul>
+	<h2>Transitions and Animations</h2>
+	<ul>
+		<li>{{{createLink 'Transitions'}}}</li>
+		<li>{{{createLink 'Promises'}}}</li>
+		<li>{{{createLink 'Ractive.easing' 'Easings'}}}</li>
+	</ul>
+	<h2>Components</h2>
+	<ul>
+		<li>{{{createLink 'Components'}}}</li>
+	</ul>
+</section>
+<section>
 	<h1>API Reference</h1>
 	<h2>Constructor</h2>
 	<ul>
@@ -62,46 +100,19 @@
 		<li>{{{createLink 'Ractive.defaults'}}}</li>
 	</ul>
 </ul>
-
+</section>
 <section>
-	<h1>Using plugins</h1>
+	<h1>Plugins</h1>
+	<h2>Using</h2>
 	<ul>
 		<li>{{{createLink 'Plugins' 'List of plugins'}}}</li>
-		<li>{{{createLink 'Adaptors'}}}</li>
-		<li>{{{createLink 'Decorators'}}}</li>
-		<li>{{{createLink 'Events'}}}</li>
-		<li>{{{createLink 'Transitions'}}}</li>
 	</ul>
-</section>
-
-<section>
-	<h1>Writing plugins</h1>
+	<h2>Writing</h2>
 	<ul>
 		<li>{{{createLink 'Writing adaptor plugins' 'Adaptors'}}}</li>
 		<li>{{{createLink 'Writing decorator plugins' 'Decorators'}}}</li>
 		<li>{{{createLink 'Writing event plugins' 'Events'}}}</li>
 		<li>{{{createLink 'Writing transition plugins' 'Transitions'}}}</li>
-	</ul>
-</section>
-
-<section>
-	<h1>Glossary</h1>
-	<ul>
-		<li>{{{createLink 'Array modification'}}}</li>
-		<li>{{{createLink 'Components'}}}</li>
-		<li>{{{createLink 'Computed Properties'}}}</li>
-		<li>{{{createLink 'Dependants'}}}</li>
-		<li>{{{createLink 'Expressions'}}}</li>
-		<li>{{{createLink 'Keypaths'}}}</li>
-		<li>{{{createLink 'Magic mode'}}}</li>
-		<li>{{{createLink 'Mustaches'}}}</li>
-		<li>{{{createLink 'Observers'}}}</li>
-		<li>{{{createLink 'Parallel DOM'}}}</li>
-		<li>{{{createLink 'Partials'}}}</li>
-		<li>{{{createLink 'Promises'}}}</li>
-		<li>{{{createLink 'References'}}}</li>
-		<li>{{{createLink 'Templates'}}}</li>
-		<li>{{{createLink 'Two-way binding'}}}</li>
 	</ul>
 </section>
 
