--- a/docs/0.5/ractive.merge().md.hbs
+++ b/docs/0.5/ractive.merge().md.hbs
@@ -2,11 +2,48 @@
 title: ractive.merge()
 ---
 
-Merges data from one array into another, inserting and removing nodes from the DOM as necessary. This is an efficient way to (for example) handle data from a server.
+Sets the indicated keypath to the new array value, but "merges" the existing rendered nodes
+representing the data into the newly rendred array, inserting and removing nodes from the DOM as necessary.
+Where necessary, items are moved from their current location in the array (and, therefore, in the DOM)
+to their new location.
 
-Where necessary, items are moved from their current location in the array (and, therefore, in the DOM) to their new location. To determine whether the first item of `['foo', 'bar', 'baz']` is the same as the last item of `['bar', 'baz', 'foo']`, by default we do a strict equality (`===`) check.
+This is an efficient way to (for example) handle data from a server. It also helps to control `intro` and `outro`
+{{{createLink 'Transitions' 'transitions'}}} which might not otherwise happen with a basic
+{{{createLink 'ractive.set()' }}} operation.
 
-In some situations that won't work, because the arrays contain objects, which may *look* the same but not be identical. To deal with these, we use the `compare` option detailed below.
+To determine whether the first item of `['foo', 'bar', 'baz']` is
+the same as the last item of `['bar', 'baz', 'foo']`, by default we do a strict equality (`===`) check.
+
+In some situations that won't work, because the arrays contain objects, which may *look* the same
+but not be identical. To deal with these, we use the `compare` option detailed below.
+
+Merge can also be used to created a context block that uses transitions when the context changes:
+
+```html
+\{{#user}}
+<div intro='fade'>\{{first}} \{{last}}</div>
+\{{/}}
+```
+
+```js
+var r = new Ractive({
+    el: document.body,
+    template: '#template',
+    data: {
+        user: [{
+            first: 'sam',
+            last: 'smith'
+        }]
+    },
+    complete: function(){
+        this.merge('user', [{
+            first: 'jane',
+            last: 'johnson'
+        }])
+    }
+})
+
+```
 
 > ### ractive.merge( keypath, value[, options] )
 > Returns a `Promise` (see {{{createLink 'Promises'}}})
