--- a/docs/0.5/ractive.merge().md.hbs
+++ b/docs/0.5/ractive.merge().md.hbs
@@ -3,7 +3,7 @@ title: ractive.merge()
 ---
 
 Sets the indicated keypath to the new array value, but "merges" the existing rendered nodes
-representing the data into the newly rendred array, inserting and removing nodes from the DOM as necessary.
+representing the data into the newly rendered array, inserting and removing nodes from the DOM as necessary.
 Where necessary, items are moved from their current location in the array (and, therefore, in the DOM)
 to their new location.
 
