--- a/docs/0.5/Plugins.md.hbs
+++ b/docs/0.5/Plugins.md.hbs
@@ -2,8 +2,8 @@
 title: Plugins
 section: Plugins
 ---
-Plugins allow you to augment Ractive with extra functionality. You can create your own plugins - see the {{{createLink 'Plugin APIs'}}} page and the [plugin template](https://github.com/RactiveJS/Plugin-template) to get started.
-
+Plugins allow you to augment Ractive with extra functionality. You can create your own plugins - the individual
+plugin API pages under "Writing" and the [plugin template](https://github.com/RactiveJS/Plugin-template) to get started.
 
 ## {{{createLink 'Adaptors'}}}
 
