--- a/scss/code.scss
+++ b/scss/code.scss
@@ -9,7 +9,7 @@ $var: rgb(80,80,180);
 $punctuation: #888;
 $string: $green;
 $type: $blue;
-$comment: #aaa;
+$comment: rgb(120, 150, 160);
 //$attrName: rgb(50,150,50);
 $attrName: rgb(80,80,180);
 $tag: $blue;
