--- a/docs/0.5/ractive.render().md.hbs
+++ b/docs/0.5/ractive.render().md.hbs
@@ -2,4 +2,9 @@
 title: ractive.render()
 ---
 
-This method will throw an error if you call it! It exists so that components can override the standard render logic with their own (e.g. for delegating to external libraries, or rendering to a canvas - note that this is not well supported as of version 0.4.0).
+Renders the component into a DOM element.
+
+> ### ractive.render( target )
+
+> > #### **target** *`Node`* or *`String`* or *`jQuery`* (see {{{createLink 'Valid selectors'}}})
+> > The DOM element to render to
