--- a/docs/0.5/ractive.subtract().md.hbs
+++ b/docs/0.5/ractive.subtract().md.hbs
@@ -14,8 +14,8 @@ Decrements the value of the given {{{createLink 'keypaths' 'keypath'}}}.
 
 ### Example
 
-This is useful for numeric counters. Instead of using {{{createLink 'ractive-get' 'get()'}}}
-and {{{createLink 'ractive-set' 'set()'}}} in succession, using *add()* and *subtract()* will
+This is useful for numeric counters. Instead of using {{{createLink 'ractive-get' 'ractive.get()'}}}
+and {{{createLink 'ractive-set' 'ractive.set()'}}} in succession, using *add()* and *subtract()* will
 simplify your code.
 
 ```js
