--- a/docs/0.5/Mustaches.md.hbs
+++ b/docs/0.5/Mustaches.md.hbs
@@ -6,7 +6,7 @@ title: Mustaches
 
 [Mustache](http://mustache.github.com) is one of the most popular templating languages. It's a very lightweight, readable syntax with a comprehensive specification - which means that implementations (such as Ractive) can test that they're doing things correctly.
 
-Other templating languages borrow liberally from Mustache. [Handlebars](http://handlebarsjs.com) has a mustache-like syntax, as does [Angular](http://angularjs.org).
+If you've used [Handlebars](http://handlebarsjs.com) or [Angular](http://angularjs.org) you'll also find mustaches familiar.
 
 ## What are mustaches?
 
@@ -16,13 +16,275 @@ We say that the `\{{name}}` mustache has a *[reference](references)* of `name`. 
 
 As soon as the mustache knows what its keypath is (which may not be at render time, if data has not yet been set), it registers itself as a *{{{createLink 'dependants' 'dependant'}}}* of the keypath. Then, whenever data changes, Ractive scans the dependency graph to see which mustaches need to update, and notifies them accordingly.
 
-As well as simple *interpolators* like `\{{name}}`, the other mustaches types - sections, partials, and even delimiter changes - are supported. Consult the [tutorials](http://learn.ractivejs.org) to learn about these.
+## Mustache basics
 
+If you already know Mustache, Ractive supports all the Mustache features - basic Mustache variables like `\{{name}}`, as well as sections, partials, and even delimiter changes. If you're already familiar with Mustache, skip to the Extensions section below.
+
+You can also check out the [tutorials](http://learn.ractivejs.org).
+
+### Variables
+
+The most basic mustache type is the variable. A `\{{name}}` tag in a template will try to find the `name` key in the current context. If there is no `name` key in the current context, the parent contexts will be checked recursively. If the top context is reached and the name key is still not found, nothing will be rendered.
+
+All variables are HTML escaped by default. If you want to return unescaped HTML, use the triple mustache: `\{{{name}}}`.
+
+You can also use `&` to unescape a variable: `\{{& name}}`. This may be useful when changing delimiters (see "Set Delimiter" below).
+
+
+Template:
+
+```html
+ * \{{name}}
+ * \{{age}}
+ * \{{company}}
+ * \{{{company}}}
+```
+
+With the following data:
+
+```javascript
+{
+  "name": "Chris",
+  "company": "<b>GitHub</b>"
+}
+```
+
+Will generate the following output:
+
+```
+ * Chris
+ *
+ * &lt;b&gt;GitHub&lt;/b&gt;
+ * <b>GitHub</b>
+```
+
+### Sections
+Sections render blocks of text one or more times, depending on the value of the key in the current context.
+
+A section begins with a pound and ends with a slash. That is, `\{{#person}}` begins a "person" section while `\{{/person}}` ends it.
+
+The behavior of the section is determined by the value of the key.
+
+#### False Values or Empty Lists
+
+If the person key exists and has a value of false or an empty list, the HTML between the pound and slash will not be displayed.
+
+Template:
+
+```html
+Shown.
+\{{#person}}
+  Never shown!
+\{{/person}}
+```
+
+Data:
+
+```javascript
+{
+  "person": false
+}
+```
+Output:
+
+```html
+Shown.
+```
+#### Non-Empty Lists
+
+If the person key exists and has a non-false value, the HTML between the pound and slash will be rendered and displayed one or more times.
+
+When the value is a non-empty list, the text in the block will be displayed once for each item in the list. The context of the block will be set to the current item for each iteration. In this way we can loop over collections.
+
+Template:
+
+```html
+\{{#repo}}
+  <b>{{name}}</b>
+\{{/repo}}
+```
+
+Data:
+
+```javascript
+{
+  "repo": [
+    { "name": "resque" },
+    { "name": "hub" },
+    { "name": "rip" }
+  ]
+}
+```
+
+Output:
+
+```html
+<b>resque</b>
+<b>hub</b>
+<b>rip</b>
+```
+
+#### Non-False Values
+
+When the value is non-false but not a list, it will be used as the context for a single rendering of the block.
+
+Template:
+
+```html
+\{{#person?}}
+  Hi {{name}}!
+\{{/person?}}
+```
+
+Data:
+
+```javascript
+{
+  "person?": { "name": "Jon" }
+}
+```
+
+Output:
+
+```html
+Hi Jon!
+```
+
+#### Inverted Sections
+
+An inverted section begins with a caret (hat) and ends with a slash. That is  \{{^person}} begins a "person" inverted section while \{{/person}} ends it.
+
+While sections can be used to render text one or more times based on the value of the key, inverted sections may render text once based on the inverse value of the key. That is, they will be rendered if the key doesn't exist, is false, or is an empty list.
+
+Template:
+
+```html
+\{{#repo}}
+  <b>{{name}}</b>
+\{{/repo}}
+\{{^repo}}
+  No repos :(
+\{{/repo}}
+```
+
+Ractive borrows a trick from Handlebars here and lets you perform:
+
+```html
+\{{#repo}}
+  <b>{{name}}</b>
+\{{else}}
+  No repos :(
+\{{/repo}}
+```
+
+Data:
+
+```javascript
+{
+  "repo": []
+}
+```
+
+Output:
+
+```html
+No repos :(
+```
+
+### Comments
+Comments begin with a bang and are ignored. The following template:
+
+```html
+<h1>Today\{{! ignore me }}.</h1>
+```
+
+Will render as follows:
+
+```html
+<h1>Today.</h1>
+```
+
+Comments may contain newlines.
+
+### Partials
+
+Partials begin with a greater than sign:
+
+```html
+\{{> box}}
+```
+
+Recursive partials are possible. Just avoid infinite loops.
+
+They also inherit the calling context. For example:
+
+```html
+\{{> next_more}}
+```
+
+
+In this case, `next_more.mustache` file will inherit the size and start methods from the calling context.
+
+In this way you may want to think of partials as includes, or template expansion:
+
+For example, this template and partial:
+
+base.mustache:
+
+```html
+<h2>Names</h2>
+{{#names}}
+  {{> user}}
+{{/names}}
+```
+
+With `user.mustache` containing:
+
+```html
+<strong>{{name}}</strong>
+```
+
+Can be thought of as a single, expanded template:
+
+```html
+<h2>Names</h2>
+{{#names}}
+  <strong>{{name}}</strong>
+{{/names}}
+```
+
+### Custom delimiters
+
+Custom delimiters are set with a 'Set delimiter' tag. Set delimiter tags start with an equal sign and change the tag delimiters from `\{{` and `}}` to custom strings.
+
+```html
+\{{foo}}
+  \{{=[[ ]]=}}
+[[bar]]
+```
+
+Custom delimiters may not contain whitespace or the equals sign.
+
+
+You can also set custom delimiters using the `delimiters` and `tripleDelimiters` options in your Ractive instance.
+
+```javascript
+var ractive = new Ractive({
+  el: whatever,
+  template: myTemplate,
+  data: {
+    greeting: 'Hello',
+    greeted: 'world',
+    triple: '<strong>This is a triple-stache</strong>'
+  },
+  delimiters: [ '[[', ']]' ],
+  tripleDelimiters: [ '[[[', ']]]' ]
+});
+```
 
 ## Extensions
 
 Ractive is 99% backwards-compatible with Mustache, but adds five additional features (array index references, object iteration, restricted references, ancestor references and expressions) which are detailed below.
-
 
 ### Array Index references
 
@@ -71,8 +333,11 @@ We can iterate over the users object with the following:
     <li>\{{name}}: \{{email}}</li>
   \{{/users}}
 </ul>
+```
 
-<!-- becomes... -->
+to create:
+
+```html
 <ul>
   <li>Joe: joe@example.com</li>
   <li>Jane: jane@example.com</li>
