--- a/docs/0.5/Plugins.md.hbs
+++ b/docs/0.5/Plugins.md.hbs
@@ -20,6 +20,7 @@ plugin API pages under "Writing" and the [plugin template](https://github.com/Ra
 
 * [Sortable](http://ractivejs.github.io/Ractive-decorators-sortable/)
 * [Select2](http://prezent.github.io/ractive-decorators-select2/) - contributed by [@sandermarechal](https://github.com/sandermarechal) ([@Prezent](https://github.com/Prezent))
+* [minmaxwidth](https://github.com/cfenzo/Ractive-decorators-minmaxwidth) - contributed by [@cfenzo](https://github.com/cfenzo)
 
 
 ## {{{createLink 'Events'}}}
