--- a/docs/0.5/Two-way binding.md.hbs
+++ b/docs/0.5/Two-way binding.md.hbs
@@ -3,7 +3,7 @@ title: Two-way binding
 ---
 By default, a Ractive instance will update its internal model based on user input, if you have `<input>`, `<textarea>` or `<select>` elements.
 
-If that's unhelpful for your app, you can disable it by passing `twoway: false` as an {{{createLink 'initialisation-options' 'initialisation option'}}}.
+If that's unhelpful for your app, you can disable it by passing `twoway: false` as an {{{createLink 'options' 'initialisation option'}}}.
 
 
 ## `<input>` elements
