switch promises tip to relevant promises doc and drop the out of date page about integrating with third parties

--- a/docs/0.5/Tips.md.hbs
+++ b/docs/0.5/Tips.md.hbs
@@ -7,7 +7,7 @@ Using Ractive with...
 * {{{createLink 'using-ractive-with-backbone' '...Backbone'}}}
 * {{{createLink 'using-ractive-with-requirejs' '...RequireJS'}}}
 * {{{createLink 'using-ractive-with-browserify' '...Browserify'}}}
-* {{{createLink 'using-ractive-with-promises-and-deferreds' '...promises and deferreds'}}}
+* {{{createLink 'Promises' '...built-in Promise support'}}}
 * {{{createLink 'using-ractive-with-jquery-mobile' '...jQuery Mobile'}}}
 <!-- TODO * [...Underscore (and other utility libraries)](using-ractive-with-underscore) -->
 
