--- a/docs/0.5/Mustaches.md.hbs
+++ b/docs/0.5/Mustaches.md.hbs
@@ -284,7 +284,7 @@ var ractive = new Ractive({
 
 ## Extensions
 
-Ractive is 99% backwards-compatible with Mustache, but adds five additional features (array index references, object iteration, restricted references, ancestor references and expressions) which are detailed below.
+Ractive is 99% backwards-compatible with Mustache, but adds six additional features (array index references, object iteration, restricted references, ancestor references, expressions, and special sections) which are detailed below.
 
 ### Array Index references
 
@@ -445,6 +445,39 @@ The neat part is that this expression will recognise it has a dependency on what
 
 Mustache fans may bristle at expressions - after all, the whole point is that mustache templates are *logic-less*, right? But what that really means is that the logic is *embedded in the syntax* (what are conditionals and iterators if not forms of logic?) rather than being language dependent. Expressions just allow you to add a little more, and in so doing make complex tasks simple.
 
+
+### Special Sections
+
+In addition to implicit conditional and iterative sections, Ractive adds ```if```, ```else```, ```each```, and ```with``` to handle branching, iteration, and context control.
+
+```html
+<button on-click="flip">Flip Coin</button>
+<p>Coin flip result: \{{#if heads}}heads\{{else}}tails\{{/if}}</p>
+<ul>
+  \{{#each result}}<li>\{{.}}</li>\{{/each}}
+</ul>
+<p>Here is a \{{#with some.nested.value}}\{{.}}\{{/with}} value.</p>
+```
+
+```js
+var ractive = new Ractive({
+  el: document.body,
+  template: myTemplate,
+  data: {
+    results: [],
+    heads: true,
+    some: { nested: { value: 'nested' } }
+  }
+});
+
+ractive.on('flip', function() {
+  var sadRandom = Math.floor(Math.random() * 2) === 1;
+  this.set('heads', sadRandom);
+  this.unshift('results', sadRandom ? 'heads' : 'tails');
+});
+```
+
+In this example, clicking the button gets a "random" coin flip result, sets it in an ```if``` conditional section, and prepends it in an ```each``` iterative section. There is also a ```with``` context section throw in for good measure.
 
 ## Footnote
 
