document ractive array methods pop, push, shift, splice, and unshift

--- a/docs/0.5/Promises.md.hbs
+++ b/docs/0.5/Promises.md.hbs
@@ -7,11 +7,16 @@ Several methods in Ractive - those which trigger changes to the view, which may 
 * {{{createLink 'ractive.add()'}}}
 * {{{createLink 'ractive.animate()'}}}
 * {{{createLink 'ractive.merge()'}}}
+* {{{createLink 'ractive.pop()'}}}
+* {{{createLink 'ractive.push()'}}}
 * {{{createLink 'ractive.reset()'}}}
 * {{{createLink 'ractive.set()'}}}
+* {{{createLink 'ractive.shift()'}}}
+* {{{createLink 'ractive.splice()'}}}
 * {{{createLink 'ractive.subtract()'}}}
 * {{{createLink 'ractive.teardown()'}}}
 * {{{createLink 'ractive.toggle()'}}}
+* {{{createLink 'ractive.unshift()'}}}
 * {{{createLink 'ractive.update()'}}}
 
 The promise will fulfil *once there are no longer any active transitions resulting from the operation*.
