--- a/templates/0.5/partials/left-nav.md.hbs
+++ b/templates/0.5/partials/left-nav.md.hbs
@@ -74,13 +74,18 @@
 		<li>{{{createLink 'ractive.observe()'}}}</li>
 		<li>{{{createLink 'ractive.off()'}}}</li>
 		<li>{{{createLink 'ractive.on()'}}}</li>
+		<li>{{{createLink 'ractive.pop()'}}}</li>
+		<li>{{{createLink 'ractive.push()'}}}</li>
 		<li>{{{createLink 'ractive.render()'}}}</li>
 		<li>{{{createLink 'ractive.reset()'}}}</li>
 		<li>{{{createLink 'ractive.set()'}}}</li>
+		<li>{{{createLink 'ractive.shift()'}}}</li>
+		<li>{{{createLink 'ractive.splice()'}}}</li>
 		<li>{{{createLink 'ractive.subtract()'}}}</li>
 		<li>{{{createLink 'ractive.teardown()'}}}</li>
 		<li>{{{createLink 'ractive.toggle()'}}}</li>
 		<li>{{{createLink 'ractive.toHTML()'}}}</li>
+		<li>{{{createLink 'ractive.unshift()'}}}</li>
 		<li>{{{createLink 'ractive.update()'}}}</li>
 		<li>{{{createLink 'ractive.updateModel()'}}}</li>
 	</ul>
