fix missing hb escape eating the end of the mustaches docs

--- a/docs/0.5/Mustaches.md.hbs
+++ b/docs/0.5/Mustaches.md.hbs
@@ -448,7 +448,7 @@ Mustache fans may bristle at expressions - after all, the whole point is that mu
 
 ### Special Sections
 
-In addition to implicit conditional and iterative sections, Ractive adds ```if```, ```unless```, ```each```, and ```with``` to handle branching, iteration, and context control. For ```if``` and ```each```, ```{{else}}``` may be used to provide an alternate branch for a false condition or an empty iterable.
+In addition to implicit conditional and iterative sections, Ractive adds ```if```, ```unless```, ```each```, and ```with``` to handle branching, iteration, and context control. For ```if``` and ```each```, ```\{{else}}``` may be used to provide an alternate branch for a false condition or an empty iterable.
 
 ```html
 <button on-click="flip">Flip Coin</button>
