--- a/docs/0.5/ractive.on().md.hbs
+++ b/docs/0.5/ractive.on().md.hbs
@@ -9,3 +9,8 @@ Subscribe to {{{createLink 'events'}}}.
 > > The name of the event to subscribe to
 > > #### **handler** *`Function`*
 > > The function that will be called, with `ractive` as `this`. The arguments depend on the event
+
+> ### ractive.on( obj )
+> Returns an `Object` with a `cancel` method, which removes all handlers in the passed-in `obj`.
+> > #### **obj** *`Object`*
+> > An object with keys named for each event to subscribe to. The value at each key is the handler function for that event.
