Link to Ractive.easing #83

--- a/templates/0.5/partials/left-nav.md.hbs
+++ b/templates/0.5/partials/left-nav.md.hbs
@@ -103,6 +103,7 @@
 	<h2>Static properties</h2>
 	<ul>
 		<li>{{{createLink 'Ractive.defaults'}}}</li>
+		<li>{{{createLink 'Ractive.easing'}}}</li>
 	</ul>
 </ul>
 </section>
