--- a/docs/0.5/Options.md.hbs
+++ b/docs/0.5/Options.md.hbs
@@ -18,8 +18,8 @@ The following is a complete list of initialisation options, with full descriptio
 | [debug](#debug)                           		| [environment](environment)      		| increases app feedback |
 | [decorators](#decorators)                 		| [templating](#templating)       		| decorators to include for use by the template |
 | [delimiters](#delimiters)                 		| [parsing](#parsing)          			| delimiters to use when parsing the template |
-| [el](#el)                                 		| [placement](#dom-placement)    	    | render to this element in the dom |
 | [easing](#easing)                         		| [transitions](#transitions-animations)| easing functions to use in transitions |
+| [el](#el)                                 		| [placement](#dom-placement)    	    | render to this element in the dom |
 | [events](#events)                         		| [templating](#templating)      		| events to include for use by the template |
 | [interpolators](#interpolators)           		| [transitions](#transitions-animations)| interpolators to use for animating values |
 | [isolated](#isolated)                        		| [data](#data-binding)          		| prevent components from accessing parent data and registries |
@@ -358,7 +358,7 @@ A `key: value` hash of transitions that are specific to this instance. The `key`
 
 > <a id="staticDelimiters"></a>
 > ### staticDelimiters *`Array` where `[ open, close ]`*
-> Defaults to `[ '\{{', '}}' ]`. Used to set what static (one-time binding) delimiters to use when parsing templates.
+> Defaults to `[ '\[[', ']]' ]`. Used to set what static (one-time binding) delimiters to use when parsing templates.
 
 > ```
 > var ractive = new Ractive({
@@ -374,7 +374,7 @@ A `key: value` hash of transitions that are specific to this instance. The `key`
 
 > <a id="staticTripleDelimiters"></a>
 > ### staticTripleDelimiters *`Array` where `[ open, close ]`*
-> Defaults to `[ '\{{{', '}}}' ]`. Used to set what static (one-time binding) triple delimiters to use when parsing templates.
+> Defaults to `[ '\[[[', ']]]' ]`. Used to set what static (one-time binding) triple delimiters to use when parsing templates.
 
 > ```
 > var ractive = new Ractive({
