Correct method name

--- a/docs/0.5/ractive.splice().md.hbs
+++ b/docs/0.5/ractive.splice().md.hbs
@@ -3,7 +3,7 @@ title: ractive.splice()
 ---
 The Ractive equivalent to ```Array.splice``` that can add new elements to the array while removing existing elements.
 
-> ### ractive.shift( keypath, index, removeCount, add... )
+> ### ractive.splice( keypath, index, removeCount, add... )
 > Returns a `Promise` (see {{{createLink 'Promises'}}}) that will resolve with the removed elements after the update is complete.
 
 > > #### **keypath** *`String`*
