--- a/docs/0.5/Options.md.hbs
+++ b/docs/0.5/Options.md.hbs
@@ -358,7 +358,7 @@ A `key: value` hash of transitions that are specific to this instance. The `key`
 
 > <a id="staticDelimiters"></a>
 > ### staticDelimiters *`Array` where `[ open, close ]`*
-> Defaults to `[ '\[[', ']]' ]`. Used to set what static (one-time binding) delimiters to use when parsing templates.
+> Defaults to `[ '[[', ']]' ]`. Used to set what static (one-time binding) delimiters to use when parsing templates.
 
 > ```
 > var ractive = new Ractive({
@@ -374,7 +374,7 @@ A `key: value` hash of transitions that are specific to this instance. The `key`
 
 > <a id="staticTripleDelimiters"></a>
 > ### staticTripleDelimiters *`Array` where `[ open, close ]`*
-> Defaults to `[ '\[[[', ']]]' ]`. Used to set what static (one-time binding) triple delimiters to use when parsing templates.
+> Defaults to `[ '[[[', ']]]' ]`. Used to set what static (one-time binding) triple delimiters to use when parsing templates.
 
 > ```
 > var ractive = new Ractive({
